[tool.poetry]
name = "python-lib-template"
version = "0.1.0"
description = "Simple template for python libs with poetry and mkdocs."
authors = ["Ouail Bendidi <ouail.bendidi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/obendidi/python-lib-template"
homepage = "https://github.com/obendidi/python-lib-template"
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}
mypy = "^0.930"
isort = "^5.9.3"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.15.0"
mock = "^4.0.3"
mkautodoc = "^0.1.0"
mkdocs-material = "^8.1.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = 3.7
exclude = "tests/"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
# add your package name here
addopts = "-ra -q -vv --cov={{package-name}} --cov-report=term"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["**/tests/test_*.py"]
fail_under = 50
