[tool.poetry]
name = "pstock-python"
version = "0.2.0"
description = "Async yahoo-finance python api with pydantic models."
authors = ["Ouail Bendidi <ouail.bendidi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/obendidi/pstock"
homepage = "https://github.com/obendidi/pstock"
keywords = ["stock", "yahoo-finance", "httpx", "pstock", "pydantic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
]
include = ["LICENSE"]
packages = [
    { include = "pstock" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
httpx = "^0.21.3"
pydantic = "^1.9.0"
pandas = "^1.3.5"
tenacity = "^8.0.1"
pendulum = "^2.1.2"
asyncer = "^0.0.1"
feedparser = "^6.0.8"
lxml = "^4.7.1"
beautifulsoup4 = "^4.10.0"


[tool.poetry.dev-dependencies]
black = {version = "^22.1", allow-prereleases = true}
mypy = "^0.930"
isort = "^5.9.3"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pre-commit = "^2.15.0"
mock = "^4.0.3"
respx = "^0.19.0"
types-python-dateutil = "^2.8.6"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.7"
nox = "^2022.1.7"
httpx-cache = "^0.4.1"
syrupy = "^1.7.3"
pytest-cases = "^3.6.9"
mkdocstrings = "^0.18.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
python_version = 3.7
exclude = "tests/"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["pstock"]
known_third_party = ["httpx", "pandas", "pydantic", "anyio"]

[tool.pytest.ini_options]
addopts = "-ra -q -vv --cov=pstock --cov-report=term --cov-report=xml"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
omit = ["**/tests/test_*.py"]
fail_under = 10
